# rsomics-wig-to-bed

./: Cargo.toml
.github/workflows/: ci.yml
benches/: bench.rs
src/: cli.rs  lib.rs  main.rs
tests/: compat.rs  smoke.rs
tests/golden/: signal.wig
