[package]
name = "rsomics-wig-to-bed"
version = "0.1.0"
description = "Convert WIG/bedGraph signal tracks to BED intervals above a threshold"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "rsomics-wig-to-bed"
path = "src/main.rs"

[lib]
name = "rsomics_wig_to_bed"
path = "src/lib.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.6" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
clap.workspace = true

[lints]
workspace = true
