[package]
name = "rsomics-wig-to-bed"
version = "0.1.0"
description = "Convert WIG/bedGraph signal tracks to BED intervals above a threshold"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-wig-to-bed"
path = "src/main.rs"

[lib]
name = "rsomics_wig_to_bed"
path = "src/lib.rs"

doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }

